text alignment fixed

--- a/styles/partials/_hamburger.scss
+++ b/styles/partials/_hamburger.scss
@@ -10,6 +10,9 @@
         transition: 0.5s ease;
     }
     cursor: pointer;
+    button::-moz-focus-inner {
+        box-shadow: 0 0 1pt 1pt $accent; 
+    }
 }
 nav input{
     width: 100%;
