--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -142,6 +142,9 @@ nav{
         font-size: 20px;
         }
     }
+    .project-details h3{
+        text-align: center;
+    }
 }
 @media(max-width: 820px){
     .hero {
