--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -69,6 +69,9 @@ p.project-skills{
                 padding-left: 0px;
                 padding-right: 0px;
                 width: 100%;
+                h3{
+                    text-align: center;
+                }
                 a{
                     margin-left: 10px;
                     margin-right: 10px;
@@ -80,6 +83,9 @@ p.project-skills{
             align-items: center;
             text-align: center;
             padding-left: 0;
+            h3{
+                text-align: center;
+            }
         }
         flex-direction: column;
         border-bottom: 2px solid $grey;
